Countries and Flags looking better

--- a/soccer.css
+++ b/soccer.css
@@ -8,5 +8,13 @@
 }
 
 .matchcontainer {
-  max-width: 600px;
+
+}
+
+.countryWithFlag > img {
+  margin-right: 2px;
+}
+
+.countryWithFlag > span {
+  vertical-align: middle;
 }
